src/objects/Commission_Plan__c.object
<CustomObject>
    <fields>
        <fullName>On_Target_Earnings_OTE__c</fullName>
        <formula>Salary__c+Variable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On-Target Earnings (OTE)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <inlineHelpText>Quota for the period covered (annual, quarterly, etc.)</inlineHelpText>
        <label>Quota</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_Safe_ID__c</fullName>
        <formula>Rep__r.User_Safe_ID__c</formula>
        <label>Rep Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Comp_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Max__c</fullName>
        <label>Tier 1 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Rate__c</fullName>
        <label>Tier 1 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_2_Max__c</fullName>
        <label>Tier 2 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate__c</fullName>
        <label>Tier 2 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tier_3_Max__c</fullName>
        <label>Tier 3 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Rate__c</fullName>
        <label>Tier 3 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tiers_Used__c</fullName>
        <formula>IF(AND(ISBLANK(Tier_1_Rate__c),
ISBLANK(Tier_2_Rate__c),
ISBLANK(Tier_3_Rate__c),
ISBLANK(Tier_4_Rate__c)),0,

IF(AND(NOT(ISBLANK(Tier_1_Rate__c)),
ISBLANK(Tier_2_Rate__c),
ISBLANK(Tier_3_Rate__c),
ISBLANK(Tier_4_Rate__c)),1,

IF(AND(NOT(ISBLANK(Tier_1_Rate__c)),
NOT(ISBLANK(Tier_2_Rate__c)),
ISBLANK(Tier_3_Rate__c),
ISBLANK(Tier_4_Rate__c)),2,

IF(AND(NOT(ISBLANK(Tier_1_Rate__c)),
NOT(ISBLANK(Tier_2_Rate__c)),
NOT(ISBLANK(Tier_3_Rate__c)),
ISBLANK(Tier_4_Rate__c)),3,

IF(AND(NOT(ISBLANK(Tier_1_Rate__c)),
NOT(ISBLANK(Tier_2_Rate__c)),
NOT(ISBLANK(Tier_3_Rate__c)),
NOT(ISBLANK(Tier_4_Rate__c))),4,
-1)))))</formula>
        <label>Tiers Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variable__c</fullName>
        <label>Variable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Commission Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCP-{00000}</displayFormat>
        <label>Sales Comp Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>